--- a/part2/countryInfo/package.json
+++ b/part2/countryInfo/package.json
@@ -7,13 +7,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server -p 3001 db.json",
-    "start": "node index.js",
-    "dev" : "node --watch index.js"
+    "dev" : "vite"
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "express": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -27,11 +24,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "json-server": "^1.0.0-beta.3",
     "vite": "^5.4.8"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
