--- a/part2/countryInfo/package.json
+++ b/part2/countryInfo/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.12.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite": "^5.4.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -23,7 +24,6 @@
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "globals": "^15.9.0"
   }
 }
